<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="42dp"
        android:text="@string/btnEditProfile"
        app:layout_constraintBottom_toTopOf="@+id/btnChangePassword"
        app:layout_constraintStart_toStartOf="@+id/btnChangePassword" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="40dp"
        android:text="@string/btnEditPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnChangeProfilePic"
        app:layout_constraintStart_toStartOf="@+id/btnChangeProfilePic" />

    <TextView
        android:id="@+id/tvSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="37dp"
        android:text="@string/tvSettings"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/btnEditProfile"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChangeProfilePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="41dp"
        android:text="@string/btnEditProfilePic"
        app:layout_constraintBottom_toTopOf="@+id/btnChangePrefs"
        app:layout_constraintStart_toStartOf="@+id/btnChangePrefs" />

    <Button
        android:id="@+id/btnChangePrefs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        android:text="@string/btnEditPreferences"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBackUserProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="135dp"
        android:text="@string/btnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>