<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="45dp"
        android:text="@string/btnEditPassword"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtCurrentPassword"
        android:layout_width="295dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrentPassword" />

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txtPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNewPassword" />

    <EditText
        android:id="@+id/edtConfirmNewPassword"
        android:layout_width="322dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/tvConfirmNewPassword"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmNewPassword" />

    <TextView
        android:id="@+id/tvCurrentPassword"
        android:layout_width="302dp"
        android:layout_height="72dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="53dp"
        android:text="@string/tvCurrentPassword"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />

    <TextView
        android:id="@+id/tvNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvNewPassword"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCurrentPassword" />

    <Button
        android:id="@+id/btnPasswordApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="23dp"
        android:text="@string/btnApplyChanges"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmNewPassword" />

    <TextView
        android:id="@+id/tvConfirmNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/tvConfirmNewPassword"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNewPassword" />

    <Button
        android:id="@+id/btnPassBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="82dp"
        android:text="@string/btnBack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtConfirmNewPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>