<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegistration3">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="254dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/edtRegDOB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/racketreadylogo" />

    <EditText
        android:id="@+id/edtRegDOB"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="186dp"
        android:ems="10"
        android:hint="@string/txtDOB"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="@+id/listTimes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listTimes"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="81dp"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toBottomOf="@+id/tvRegLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRegTimes" />

    <TextView
        android:id="@+id/tvRegTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="241dp"
        android:text="@string/txtPrefTime"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgRegProfPic"
        android:layout_width="0dp"
        android:layout_height="155dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnCreateUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnImage"
        app:layout_constraintTop_toTopOf="@+id/spinLocation"
        tools:srcCompat="@drawable/racketreadylogo" />

    <Button
        android:id="@+id/btnCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="95dp"
        android:text="@string/btnRegister"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imgRegProfPic" />

    <Button
        android:id="@+id/btnImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="224dp"
        android:text="@string/btnImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgRegProfPic"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnReg3Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/btnBack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnCreateUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCreateUser" />

    <TextView
        android:id="@+id/tvRegLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="420dp"
        android:text="@string/txtLocation"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinLocation"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="90dp"
        android:entries="@array/locationData"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btnImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listTimes" />

</androidx.constraintlayout.widget.ConstraintLayout>