<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegistration2">

    <ImageView
        android:id="@+id/imgReg3Logo"
        android:layout_width="183dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="19dp"
        app:layout_constraintBottom_toTopOf="@+id/tvRegSkillLevel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/racketreadylogo" />

    <Spinner
        android:id="@+id/spinSkillLevel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="63dp"
        android:entries="@array/skillLevels"
        app:layout_constraintBottom_toTopOf="@+id/spinMatchType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgReg3Logo" />

    <Spinner
        android:id="@+id/spinMatchType"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:entries="@array/matchTypes"
        app:layout_constraintBottom_toBottomOf="@+id/tvRegPrefDays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvMatchType" />

    <TextView
        android:id="@+id/tvMatchType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:text="@string/txtMatchType"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/spinMatchType"
        app:layout_constraintTop_toBottomOf="@+id/tvRegSkillLevel" />

    <ListView
        android:id="@+id/listDays"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="39dp"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toTopOf="@+id/btnReg2Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRegPrefDays" />

    <TextView
        android:id="@+id/tvRegPrefDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="64dp"
        android:text="@string/txtPrefDays"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/listDays"
        app:layout_constraintTop_toBottomOf="@+id/tvMatchType" />

    <TextView
        android:id="@+id/tvRegSkillLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/txtskillLevel"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/spinSkillLevel"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="64dp"
        android:text="@string/txtNext"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnReg2Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="64dp"
        android:text="@string/btnBack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>